# svr_framework

./: CMakeLists.txt  README
common/: clock.h  id_generator.cpp  id_generator.h  timeout_queue.cpp  timeout_queue.h  utils.cpp  utils.h
containers/: fixed_mem_pool.h  fixed_ring_buf.h  fixed_vector.h  hash_mem_pool.h  mem_list.h  mem_lru_map.h  mem_lru_set.h  mem_map.h  mem_set.h  protected_mem_pool.h  queue_lock_free.h  unfixed_ring_buf.h
containers/inner/: base_mem_list.h  base_mem_lru_set.h  base_mem_set.h  base_specialization.h  base_struct.h  is_trivial_decorator.h  mem_lru_set_data.h  mem_set_data.h  ring_buf_data.h  traits_utils.h
core/: context.h  context_controller.cpp  context_controller.h  context_mgr.cpp  context_mgr.h  coro_mgr.h  generate_type_id.h  logger.h  rpc_error.h  server_core.cpp  server_core.h  server_statistics.h  system_interface.h  system_mgr.cpp  system_mgr.h  timeout_decorator.cpp  timeout_decorator.h  transport.cpp  transport.h  wait_group.h
core/interface/: channel_interface.h  codec_interface.h  coroutine_interface.h  routing_interface.h  scheduler_interface.h  service_mesh.h
patterns/: obj_factory.h  singleton.h
pb/: common_context.h  intercepter.h  pb_context.cpp  pb_context.h  pb_service.cpp  pb_service.h  pkg_flag_type.h  rpc_methods_info.h
tests/: common_test.cpp  containers_test.cpp  core_test.cpp  logger_test.cpp  patterns_test.cpp
